--- a/index.html
+++ b/index.html
@@ -148,6 +148,6 @@
                
         
           </section>
-    <footer class=footer>Made with ❤️ by Ravi Vishnoi</footer>
+    <footer class=footer>Made with Love by Ravi Vishnoi</footer>
 </body>
 </html>
